# PyHP

./: CMakeLists.txt  README.md  start.sh
assets/: postinst  postinstall.sh
assets/etc/systemd/system/: pyhp-fpm.service.tmp
assets/var/run/pyhp/: start.sh
include/: cJSON.h  conf.h  io.h  log.h  main.h  pyhp.h  runner.h  settings.h
src/: cJSON.c  conf.c  log.c  main.c  pyhp.c  runner.c  socket.c  start-socket.c
